- Add an --accessors option to the "varlist" command, to
  expose the list of currently available accessor ("dollar")
  variables
- Add more panel data graphing options -- time-series of
  group means and boxplots by group -- and redesign the
  GUI for panel plots
- New function, inlist(): gives the position of a series
  within a named list or zero if the series is not present
- "estimate" command: document the --quiet flag; and also
  enable the --quiet option for "system"
- "summary" command: add an option to print summary stats
  for the columns of a named matrix
- New function, errmsg(): returns the gretl error message
  associated with a given integer error code
- New function, rownames(): complements the colnames()
  function for matrices
- New "set" variable, matrix_mask, which can be used to
  control the included observations when constructing
  matrices from series
- Accessors $test and $pvalue: generalize to allow matrix
  values (e.g. from the coint2 command); also ensure that
  these values get recorded when using "restrict" in
  connection with a system estimator such as SUR
- "catch" modifier for commands: make this catch a wider
  range of errors
- Functions corr(), cov() and fcstats(): accept two vector
  arguments in place of two series
- Allow deletion of locale matrices within functions
- Remove deprecated aliases "noecho" and "seed"
- Fix bug: estimates could get out of order for some
  equation systems if the constant was not given in first
  place among the regressors
- Fix bug: the "diff" command applied to a lead of a series
  could produce spurious values with panel data
  
2010-11-29 version 1.9.3
- New estimation command "biprobit" (bivariate probit)
- New panel unit-root command "levinlin"
- Add help text for "dpanel"
- "restrict" command: enable the --full option for single-
  equation models estimated via OLS (makes the restricted
  estimates available as the "last model")
- "restrict" and "estimate" for equation systems: don't