@@ -255,6 +255,7 @@ enum {
     F_LOGISTIC,
     F_INVMILLS,
     F_ERRMSG,
+    F_ISCONST,
     F1_MAX,	  /* SEPARATOR: end of single-arg functions */
     F_COR,
     F_COV,
